@@ -116,7 +116,8 @@ RUN mkdir jsl && \
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys EEA14886 E1DF1F24 3DD9F856 \
   && apt-get update -y --fix-missing \
   && apt-get install -y openjdk-8-jdk ca-certificates maven
-ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+ENV MAVEN_OPTS "-XX:MaxPermSize=256m -Xmx1g"
+ENV JAVA_OPTS "-XX:MaxPermSize=256m -Xmx1g"
 
 # LaTeX
 RUN apt-get install -y texlive-latex-base texlive-fonts-recommended texlive-latex-extra xzdec
